Add ktlint custom configuration to chekc kotlin code format (#42)
* Add ktlint custom configuration to chekc kotlin code format

* Format kotlin files

* Fix mapper utils template, that failed for test